doc: Fix document preview instance scrollbar issue.

--- a/src/components/Markdown/index.module.less
+++ b/src/components/Markdown/index.module.less
@@ -75,6 +75,9 @@
 
 .warpper {
   display: flex;
+  .noScroll {
+    position: relative;
+  }
   &:not(.fullScreen) {
     transition: all .3s;
   }
